fix: schedule 배열 to MAP